Fix lỗi sub-menu không hiển thị khi có scrollBar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1507,6 +1507,7 @@ html.dark {
   position: absolute;
   padding-top: 54px;
   left: 0;
+  display: none;
   width: min(1240px, 100%);
 }
 .dropdown__inner {
@@ -1542,7 +1543,7 @@ html.dark {
   gap: 14px;
 }
 .menu-column + .menu-column {
-  margin-top: var(--inner-padding);
+  margin-top: 22px;
 }
 .menu-column__icon {
   position: relative;
@@ -1551,13 +1552,18 @@ html.dark {
   height: 36px;
   position: relative;
 }
+@media (max-width: 1199.98px) {
+  .menu-column__icon {
+    display: none;
+  }
+}
 .menu-column__content {
   flex: 1;
 }
 .menu-column__icon-1 {
   width: 30px;
   height: 30px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .menu-column__icon-2 {
   position: absolute;
@@ -1565,7 +1571,7 @@ html.dark {
   bottom: 0;
   width: 24px;
   height: 24px;
-  object-fit: cover;
+  object-fit: contain;
   filter: var(--menu-column-icon-color);
 }
 .menu-column__heading {
@@ -1577,10 +1583,10 @@ html.dark {
 .menu-column__list {
   margin-top: 19px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item--active > .menu-column__link, .menu-column__item:hover > .menu-column__link {
   color: #0071dc;
   font-weight: 500;
 }
